--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
+    <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="assets/main.js"></script>
+    
 </head>
 <body>
     <div class="container">
@@ -19,7 +20,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 col-lg-12">
                 <div class="card">
-                    <div class="card-header bg-primary">
+                    <div class="card-header bg-primary font-weight-bold">
                         Current Train Schedule
                     </div>
                 <table class="table">
@@ -32,6 +33,9 @@
                             <th scope="col">Minutes Away</th>
                         </tr>
                     </thead>
+                    <tbody>
+                        
+                    </tbody>
                 </table>
                 </div>
             </div>
@@ -39,7 +43,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 col-lg-12">
                 <div class="card">
-                    <div class="card-header bg-primary">
+                    <div class="card-header bg-primary font-weight-bold">
                         Add Train
                     </div>
                 <form>
@@ -59,11 +63,12 @@
                         <label for=frequency>Frequency (min)</label>
                         <input type="number" class="form-control" id="frequency">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" id="submit">Submit</button>
                 </form>    
                 </div>
             </div>
         </div>
     </div>
+    <script src="assets/main.js"></script>
 </body>
 </html>
