--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <th scope="col">Minutes Away</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="trainData">
                         
                     </tbody>
                 </table>
