--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <title>Train Time</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
     <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src ="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
+    
     
 </head>
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="text-center">Anytime is Train Time</h1>
+            <h1 class="text-center"><i class="fas fa-train"></i> Anytime is Train Time</h1>
             <h3 class="text-center">Choo Choo. Chee Chee</h3>
         </div>
         <div class="row">
@@ -57,7 +60,7 @@
                     </div>
                     <div class="form-group">
                         <label for=firstTrainTime>First Train Time (HH:mm - military time)</label>
-                        <input type="time" class="form-control" id="time">
+                        <input type="text" class="form-control" id="time">
                     </div>
                     <div class="form-group">
                         <label for=frequency>Frequency (min)</label>
